- new parameter misc/num_recompfac which denotes the factor, by which the absolute of an iteratively updated value has
  to be decreased in order to recompute the value from scratch
- new parameters separating/cgmip/{minnodelimit,maxnodelimit} to determine node limit. Removed parameter 
  separating/cgmip/nodelimit.

features:
- SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
  set relaxrows = FALSE
- the check script now recognizes MIQCP and MINLP instances
- new column showing the pseudo objective value
- time for initpre and exitpre methods is now also measured in presolving time

SCIP version 2.1.2
==================

fixed bugs:
- fixed bug in SCIPsolveKnapsackExactly()
- fixed bug in varAddTransitiveImplic() in var.c, when adding implications on special aggregated, namely negated,
  variables
- fixed bug in cons_quadratic where bounds on activity of quadratic term were not always invalidated when quadratic
  variables were removed
- fixed bug in heur_undercover.c, where a variable with fixed bounds but not of status SCIP_VARSTATUS_FIXED was wrongly
  handled
- fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol
  process instead of the initpre process, this was to late because you might change the status in presolving which lead
  to an assert()
- fixed issue if a primal solution leads to a cutoff of the current focus node
- fix compilation issues with zlib 1.2.6
- fixed bug in NLP representation of abspower constraints handling (x+a)^2 with nonzero a
- fixed bug parsing an and-constraint in cip format
- fixed bug in cons_setppc, did not handle new constraints with inactive variables

performance improvements:
- fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
  to exponential growth in running time